[package]
name = "azure-git-cloner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_devops_rust_api = { version = "0.7.6", features = ["git", "pipelines"] }
clap = { version = "4.3.0", features = ["derive"] }
git2 = "0.17.1"
futures = "0.3"
